--- a/app/404.html
+++ b/app/404.html
@@ -69,117 +69,39 @@
         </div>
     </section>
     <!--==========================END header ==========================-->
-    <!-- ============================ hero ============================== -->
-    <section class="hero" style="background-image: url(img/hero.jpg);">
+    <!-- ============================ 404 ============================== -->
+    <section class="s404 sec">
         <div class="container">
-            <div class="breadcrumbs">
-                <!-- Breadcrumb NavXT 6.6.0 -->
-                <span property="itemListElement" typeof="ListItem">
-                    <a property="item" typeof="WebPage" title="Перейти к Альтиус." href="https://altius-rf.ru" class="home">
-                        <span property="name">Главная</span>
-                    </a>
-                    <meta property="position" content="1">
-                </span>
-                <span> » </span>
-                <span property="itemListElement" typeof="ListItem">
-                    <a property="item" typeof="WebPage" title="Перейти к Объекты." href="https://altius-rf.ru/objects" class="post post-objects-archive">
-                        <span property="name">Объекты</span>
-                    </a>
-                    <meta property="position" content="2">
-                </span>
-                <span> » </span>
-                <span property="itemListElement" typeof="ListItem">
-                    <span property="name" class="post post-objects current-item">Капитальный ремонт Казанской ТЭЦ-1</span>
-                    <meta property="url" content="https://altius-rf.ru/objects/kapitalnyj-remont-kazanskoj-tjec-1">
-                    <meta property="position" content="3">
-                </span>
-            </div>
-            <h1 class="hero__title">Системы гиперспектральной визуализации</h1>
-        </div>
-    </section>
-    <!-- ============================END hero ============================== -->
-    <!-- ============================ sec-14 ============================== -->
-    <section class="sec-14 sec">
-        <div class="container">
-            <div class="sec-14__items">
-                <div class="sec-14__item">
-                    <div class="sec-14__item__text">
-                        <h2 class="sec-title">Бортовая система дистанционного зондирования</h2>
-                        <div class="sec-14__item__desc">Полные пакеты датчиков для получения георекламированных гиперспектральных данных.</div>
-                        <a href="" class="btn-link">Подробнее</a>
-                    </div>
-                    <div class="sec-14__item__img" style="background-image: url(img/sec-14.png);"></div>
+            <div class="s404__content">
+                <div class="breadcrumbs">
+                    <!-- Breadcrumb NavXT 6.6.0 -->
+                    <span property="itemListElement" typeof="ListItem">
+                        <a property="item" typeof="WebPage" title="Перейти к Альтиус." href="https://altius-rf.ru" class="home">
+                            <span property="name">Главная</span>
+                        </a>
+                        <meta property="position" content="1">
+                    </span>
+                    <span> » </span>
+                    <span property="itemListElement" typeof="ListItem">
+                        <a property="item" typeof="WebPage" title="Перейти к Объекты." href="https://altius-rf.ru/objects" class="post post-objects-archive">
+                            <span property="name">Объекты</span>
+                        </a>
+                        <meta property="position" content="2">
+                    </span>
+                    <span> » </span>
+                    <span property="itemListElement" typeof="ListItem">
+                        <span property="name" class="post post-objects current-item">Pika L</span>
+                        <meta property="url" content="https://altius-rf.ru/objects/kapitalnyj-remont-kazanskoj-tjec-1">
+                        <meta property="position" content="3">
+                    </span>
                 </div>
-                <div class="sec-14__item">
-                    <div class="sec-14__item__text">
-                        <h2 class="sec-title">Система открытого поля</h2>
-                        <div class="sec-14__item__desc">Портативная гиперспектральная система на штативе для наружных измерений.</div>
-                        <a href="" class="btn-link">Подробнее</a>
-                    </div>
-                    <div class="sec-14__item__img" style="background-image: url(img/sec-14.png);"></div>
-                </div>
-                <div class="sec-14__item">
-                    <div class="sec-14__item__text">
-                        <h2 class="sec-title">Настольная система - комбинированное отражение / передача</h2>
-                        <div class="sec-14__item__desc">Лабораторная система для измерения как отражательной способности, так и передачи гиперспектральных данных.</div>
-                        <a href="" class="btn-link">Подробнее</a>
-                    </div>
-                    <div class="sec-14__item__img" style="background-image: url(img/sec-14.png);"></div>
-                </div>
+                <h2 class="sec-title">Ошибка 404</h2>
+                <div class="s404__desc">Страница не найдена, вернуться обратно</div>
+                <a href="/" class="btn">Вернуться на главную</a>
             </div>
         </div>
     </section>
-    <!-- ============================END sec-14 ============================== -->
-    <!-- ============================ sec-15 ============================== -->
-    <section class="sec-15 sec gray">
-        <div class="container">
-            <div class="sec-15__content">
-                <div class="sec-15__content__text">
-                    <h2 class="sec-title">Сцены и освещение</h2>
-                    <div class="sec-15__desc">Доступны индивидуальные конфигурации. Свяжитесь с нами, чтобы обсудить ваши требования. </div>
-                </div>
-                <div class="sec-15__content__items">
-                    <div class="sec-15__content__item">
-                        <div class="sec-15__content__item__img" style="background-image: url(img/sec-15.png);"></div>
-                        <div class="sec-15__content__item__text">
-                            <div class="sec-15__content__item__title">Этап линейного сканирования</div>
-                        </div>
-                    </div>
-                    <div class="sec-15__content__item">
-                        <div class="sec-15__content__item__img" style="background-image: url(img/sec-15.png);"></div>
-                        <div class="sec-15__content__item__text">
-                            <div class="sec-15__content__item__title">Этап линейного сканирования</div>
-                        </div>
-                    </div>
-                    <div class="sec-15__content__item">
-                        <div class="sec-15__content__item__img" style="background-image: url(img/sec-15.png);"></div>
-                        <div class="sec-15__content__item__text">
-                            <div class="sec-15__content__item__title">Этап линейного сканирования</div>
-                        </div>
-                    </div>
-                    <div class="sec-15__content__item">
-                        <div class="sec-15__content__item__img" style="background-image: url(img/sec-15.png);"></div>
-                        <div class="sec-15__content__item__text">
-                            <div class="sec-15__content__item__title">Этап линейного сканирования</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- ============================END sec-15 ============================== -->
-    <!-- ============================ sec-5 ============================== -->
-    <section class="sec-5 sec">
-        <div class="container">
-            <div class="sec-5__content">
-                <h2 class="sec-title">Свяжитесь с нами</h2>
-                <div class="sec-5__desc">Щелкните ниже для получения дополнительной информации.</div>
-                <button class="btn">Свяжитесь с нами</button>
-            </div>
-            <div class="sec-5__alert">Системы высокоточной гиперспектральной съемки для исследовательских и промышленных приложений.</div>
-        </div>
-    </section>
-    <!-- ============================END sec-5 ============================== -->
+    <!-- ============================END 404 ============================== -->
     <!--========================== footer ==========================-->
     <section class="footer">
         <div class="footer__top">
