--- a/app/Связаться с нами.html
+++ b/app/Связаться с нами.html
@@ -70,7 +70,7 @@
     </section>
     <!--==========================END header ==========================-->
     <!-- ============================ hero ============================== -->
-    <section class="hero" style="background-image: url(img/hero.jpg);">
+    <section class="hero" style="background-image: url(img/pika-l.jpg);">
         <div class="container">
             <div class="breadcrumbs">
                 <!-- Breadcrumb NavXT 6.6.0 -->
@@ -89,97 +89,78 @@
                 </span>
                 <span> » </span>
                 <span property="itemListElement" typeof="ListItem">
-                    <span property="name" class="post post-objects current-item">Капитальный ремонт Казанской ТЭЦ-1</span>
+                    <span property="name" class="post post-objects current-item">Pika L</span>
                     <meta property="url" content="https://altius-rf.ru/objects/kapitalnyj-remont-kazanskoj-tjec-1">
                     <meta property="position" content="3">
                 </span>
             </div>
-            <h1 class="hero__title">Системы гиперспектральной визуализации</h1>
+            <h1 class="hero__title">Связаться с нами</h1>
         </div>
     </section>
     <!-- ============================END hero ============================== -->
-    <!-- ============================ sec-14 ============================== -->
-    <section class="sec-14 sec">
+    <!-- ============================ sec-33 ============================== -->
+    <section class="sec-33 sec white">
         <div class="container">
-            <div class="sec-14__items">
-                <div class="sec-14__item">
-                    <div class="sec-14__item__text">
-                        <h2 class="sec-title">Бортовая система дистанционного зондирования</h2>
-                        <div class="sec-14__item__desc">Полные пакеты датчиков для получения георекламированных гиперспектральных данных.</div>
-                        <a href="" class="btn-link">Подробнее</a>
+            <div class="sec-33__content">
+                <div class="sec-33__left">
+                    <h2 class="sec-title">Связаться с Resonon</h2>
+                    <div class="content-wp-editor">
+                        <p>Resonon стремится обеспечить превосходную поддержку.</p>
+                        <p>Пожалуйста, свяжитесь с нами с любыми вопросами или комментариями. Мы с нетерпением ждем вашего ответа.</p>
                     </div>
-                    <div class="sec-14__item__img" style="background-image: url(img/sec-14.png);"></div>
+                    <button class="btn">Свяжитесь с нами</button>
                 </div>
-                <div class="sec-14__item">
-                    <div class="sec-14__item__text">
-                        <h2 class="sec-title">Система открытого поля</h2>
-                        <div class="sec-14__item__desc">Портативная гиперспектральная система на штативе для наружных измерений.</div>
-                        <a href="" class="btn-link">Подробнее</a>
-                    </div>
-                    <div class="sec-14__item__img" style="background-image: url(img/sec-14.png);"></div>
-                </div>
-                <div class="sec-14__item">
-                    <div class="sec-14__item__text">
-                        <h2 class="sec-title">Настольная система - комбинированное отражение / передача</h2>
-                        <div class="sec-14__item__desc">Лабораторная система для измерения как отражательной способности, так и передачи гиперспектральных данных.</div>
-                        <a href="" class="btn-link">Подробнее</a>
-                    </div>
-                    <div class="sec-14__item__img" style="background-image: url(img/sec-14.png);"></div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- ============================END sec-14 ============================== -->
-    <!-- ============================ sec-15 ============================== -->
-    <section class="sec-15 sec gray">
-        <div class="container">
-            <div class="sec-15__content">
-                <div class="sec-15__content__text">
-                    <h2 class="sec-title">Сцены и освещение</h2>
-                    <div class="sec-15__desc">Доступны индивидуальные конфигурации. Свяжитесь с нами, чтобы обсудить ваши требования. </div>
-                </div>
-                <div class="sec-15__content__items">
-                    <div class="sec-15__content__item">
-                        <div class="sec-15__content__item__img" style="background-image: url(img/sec-15.png);"></div>
-                        <div class="sec-15__content__item__text">
-                            <div class="sec-15__content__item__title">Этап линейного сканирования</div>
+                <div class="sec-33__right">
+                    <div class="sec-33__items">
+                        <div class="sec-33__item">
+                            <div class="sec-33__item__label">Телефон:</div>
+                            <div class="sec-33__item__title">+1 (406) 586-3356</div>
                         </div>
-                    </div>
-                    <div class="sec-15__content__item">
-                        <div class="sec-15__content__item__img" style="background-image: url(img/sec-15.png);"></div>
-                        <div class="sec-15__content__item__text">
-                            <div class="sec-15__content__item__title">Этап линейного сканирования</div>
+                        <div class="sec-33__item">
+                            <div class="sec-33__item__label">Почта:</div>
+                            <div class="sec-33__item__title">inquiry@resonon.com</div>
                         </div>
-                    </div>
-                    <div class="sec-15__content__item">
-                        <div class="sec-15__content__item__img" style="background-image: url(img/sec-15.png);"></div>
-                        <div class="sec-15__content__item__text">
-                            <div class="sec-15__content__item__title">Этап линейного сканирования</div>
-                        </div>
-                    </div>
-                    <div class="sec-15__content__item">
-                        <div class="sec-15__content__item__img" style="background-image: url(img/sec-15.png);"></div>
-                        <div class="sec-15__content__item__text">
-                            <div class="sec-15__content__item__title">Этап линейного сканирования</div>
+                        <div class="sec-33__item">
+                            <div class="sec-33__item__label">Адресс:</div>
+                            <div class="sec-33__item__title">Россия, г. Москва, ул. Ратная, д. 8, корп.3, э 1, пом.1, к 1Е, оф.8</div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- ============================END sec-15 ============================== -->
-    <!-- ============================ sec-5 ============================== -->
-    <section class="sec-5 sec">
+    <!-- ============================END sec-33 ============================== -->
+    <!-- ============================ map ============================== -->
+    <section class="mapsection sec">
         <div class="container">
-            <div class="sec-5__content">
-                <h2 class="sec-title">Свяжитесь с нами</h2>
-                <div class="sec-5__desc">Щелкните ниже для получения дополнительной информации.</div>
-                <button class="btn">Свяжитесь с нами</button>
+            <div class="mapsection__content">
+                <h2 class="sec-title">Мы на карте</h2>
+                <div class="mapsection__map" id="mapsection__map"></div>
             </div>
-            <div class="sec-5__alert">Системы высокоточной гиперспектральной съемки для исследовательских и промышленных приложений.</div>
         </div>
     </section>
-    <!-- ============================END sec-5 ============================== -->
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+    <script>
+        //Яндекс Карта
+        ymaps.ready(init);
+        var myMapAll;
+
+        function init() {
+            myMapAll = new ymaps.Map("mapsection__map", {
+                center: [55.806226, 49.070544],
+                zoom: 15,
+            });
+            var myPlacemark_1 = new ymaps.Placemark([55.806226, 49.070544], {
+                balloonContentHeader: "Название объекта",
+                balloonContentBody: "Описание объекта",
+                balloonContentFooter: "",
+                hintContent: "Кликните для более подробной информации",
+            });
+            myMapAll.geoObjects.add(myPlacemark_1);
+        }
+        //END Яндекс Карта
+    </script>
+    <!-- ============================END map ============================== -->
     <!--========================== footer ==========================-->
     <section class="footer">
         <div class="footer__top">
