--- a/app/nunjucks/Публикации исследований.html
+++ b/app/nunjucks/Публикации исследований.html
@@ -50,5 +50,47 @@
     </div>
 </section>
 <!-- ============================END sec-29 ============================== -->
+<!-- ============================ sec-30 ============================== -->
+<section class="sec-30 sec white">
+    <div class="container">
+        <div class="sec-30__title">Инстуциональные партнеры</div>
+        <div class="sec-30__desc">Мы благодарны за поддержку следующим учреждениям:</div>
+        <div class="sec-30__items">
+            <div class="sec-30__item">
+                <div class="sec-30__item__img" style="background-image: url(img/sec-30-item-1.png);"></div>
+                <div class="sec-30__item__title">NASA</div>
+            </div>
+            <div class="sec-30__item">
+                <div class="sec-30__item__img" style="background-image: url(img/sec-30-item-2.png);"></div>
+                <div class="sec-30__item__title">National Institutes of Health</div>
+            </div>
+            <div class="sec-30__item">
+                <div class="sec-30__item__img" style="background-image: url(img/sec-30-item-1.png);"></div>
+                <div class="sec-30__item__title">National Institute of Standards and Technology</div>
+            </div>
+            <div class="sec-30__item">
+                <div class="sec-30__item__img" style="background-image: url(img/sec-30-item-1.png);"></div>
+                <div class="sec-30__item__title">National Oceanic and Atmospheric Administration</div>
+            </div>
+            <div class="sec-30__item">
+                <div class="sec-30__item__img" style="background-image: url(img/sec-30-item-1.png);"></div>
+                <div class="sec-30__item__title">National Science Foundation</div>
+            </div>
+            <div class="sec-30__item">
+                <div class="sec-30__item__img" style="background-image: url(img/sec-30-item-1.png);"></div>
+                <div class="sec-30__item__title">United States Air Force</div>
+            </div>
+            <div class="sec-30__item">
+                <div class="sec-30__item__img" style="background-image: url(img/sec-30-item-1.png);"></div>
+                <div class="sec-30__item__title">United States Department of Agriculture</div>
+            </div>
+            <div class="sec-30__item">
+                <div class="sec-30__item__img" style="background-image: url(img/sec-30-item-1.png);"></div>
+                <div class="sec-30__item__title">United States Department of Energy</div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- ============================END sec-30 ============================== -->
 
 {% endblock %}
