--- a/app/О нас.html
+++ b/app/О нас.html
@@ -70,7 +70,7 @@
     </section>
     <!--==========================END header ==========================-->
     <!-- ============================ hero ============================== -->
-    <section class="hero" style="background-image: url(img/hero.jpg);">
+    <section class="hero" style="background-image: url(img/pika-l.jpg);">
         <div class="container">
             <div class="breadcrumbs">
                 <!-- Breadcrumb NavXT 6.6.0 -->
@@ -89,97 +89,72 @@
                 </span>
                 <span> » </span>
                 <span property="itemListElement" typeof="ListItem">
-                    <span property="name" class="post post-objects current-item">Капитальный ремонт Казанской ТЭЦ-1</span>
+                    <span property="name" class="post post-objects current-item">Pika L</span>
                     <meta property="url" content="https://altius-rf.ru/objects/kapitalnyj-remont-kazanskoj-tjec-1">
                     <meta property="position" content="3">
                 </span>
             </div>
-            <h1 class="hero__title">Системы гиперспектральной визуализации</h1>
+            <h1 class="hero__title">О нас</h1>
         </div>
     </section>
     <!-- ============================END hero ============================== -->
-    <!-- ============================ sec-14 ============================== -->
-    <section class="sec-14 sec">
+    <!-- ============================ sec-31 ============================== -->
+    <section class="sec-31 sec white">
         <div class="container">
-            <div class="sec-14__items">
-                <div class="sec-14__item">
-                    <div class="sec-14__item__text">
-                        <h2 class="sec-title">Бортовая система дистанционного зондирования</h2>
-                        <div class="sec-14__item__desc">Полные пакеты датчиков для получения георекламированных гиперспектральных данных.</div>
-                        <a href="" class="btn-link">Подробнее</a>
+            <div class="sec-31__content">
+                <div class="sec-31__content__text">
+                    <div class="content-wp-editor">
+                        <p>Основанный в 2002 году, Resonon расположен в Бозмане, штат Монтана, в самом сердце Скалистых гор. </p>
+                        <p>Мы предоставляем полные системы гиперспектральной визуализации, а также индивидуальные аппаратные и программные решения. Наши камеры для получения гиперспектральных изображений компактны, экономичны и обеспечивают отличные характеристики.</p>
+                        <p>Resonon поставляет системы по всему миру через нашу сеть дистрибьюторов .</p>
                     </div>
-                    <div class="sec-14__item__img" style="background-image: url(img/sec-14.png);"></div>
                 </div>
-                <div class="sec-14__item">
-                    <div class="sec-14__item__text">
-                        <h2 class="sec-title">Система открытого поля</h2>
-                        <div class="sec-14__item__desc">Портативная гиперспектральная система на штативе для наружных измерений.</div>
-                        <a href="" class="btn-link">Подробнее</a>
-                    </div>
-                    <div class="sec-14__item__img" style="background-image: url(img/sec-14.png);"></div>
-                </div>
-                <div class="sec-14__item">
-                    <div class="sec-14__item__text">
-                        <h2 class="sec-title">Настольная система - комбинированное отражение / передача</h2>
-                        <div class="sec-14__item__desc">Лабораторная система для измерения как отражательной способности, так и передачи гиперспектральных данных.</div>
-                        <a href="" class="btn-link">Подробнее</a>
-                    </div>
-                    <div class="sec-14__item__img" style="background-image: url(img/sec-14.png);"></div>
+                <div class="sec-31__content__img">
+                    <img src="img/sec-31.jpg" alt="">
                 </div>
             </div>
         </div>
     </section>
-    <!-- ============================END sec-14 ============================== -->
-    <!-- ============================ sec-15 ============================== -->
-    <section class="sec-15 sec gray">
+    <!-- ============================END sec-31 ============================== -->
+    <!-- ============================ sec-32 ============================== -->
+    <section class="sec-32 sec white">
         <div class="container">
-            <div class="sec-15__content">
-                <div class="sec-15__content__text">
-                    <h2 class="sec-title">Сцены и освещение</h2>
-                    <div class="sec-15__desc">Доступны индивидуальные конфигурации. Свяжитесь с нами, чтобы обсудить ваши требования. </div>
+            <div class="sec-32__content">
+                <div class="sec-32__title">Последние достижения</div>
+                <div class="content-wp-editor">
+                    <p>Мы благодарны за поддержку следующим учреждениям:</p>
                 </div>
-                <div class="sec-15__content__items">
-                    <div class="sec-15__content__item">
-                        <div class="sec-15__content__item__img" style="background-image: url(img/sec-15.png);"></div>
-                        <div class="sec-15__content__item__text">
-                            <div class="sec-15__content__item__title">Этап линейного сканирования</div>
-                        </div>
+                <div class="sec-32__items">
+                    <div class="sec-32__item">
+                        <div class="sec-32__item__img" style="background-image: url(img/sec-32-item-1.jpg);"></div>
+                        <div class="sec-32__item__title">Resonon объединяется с миссией НАСА ARCSTONE</div>
+                        <div class="sec-32__item__desc">Resonon работает с ARCSTONE Mission для количественной оценки лунного отражения.</div>
                     </div>
-                    <div class="sec-15__content__item">
-                        <div class="sec-15__content__item__img" style="background-image: url(img/sec-15.png);"></div>
-                        <div class="sec-15__content__item__text">
-                            <div class="sec-15__content__item__title">Этап линейного сканирования</div>
-                        </div>
+                    <div class="sec-32__item">
+                        <div class="sec-32__item__img" style="background-image: url(img/sec-32-item-1.jpg);"></div>
+                        <div class="sec-32__item__title">Премия Экспортного совета округа Монтана "Экспортер года"</div>
+                        <div class="sec-32__item__desc">Resonon работает с ARCSTONE Mission для количественной оценки лунного отражения.</div>
                     </div>
-                    <div class="sec-15__content__item">
-                        <div class="sec-15__content__item__img" style="background-image: url(img/sec-15.png);"></div>
-                        <div class="sec-15__content__item__text">
-                            <div class="sec-15__content__item__title">Этап линейного сканирования</div>
-                        </div>
+                    <div class="sec-32__item">
+                        <div class="sec-32__item__img" style="background-image: url(img/sec-32-item-1.jpg);"></div>
+                        <div class="sec-32__item__title">Гиперспектральная визуализация - обучение роботов видеть</div>
+                        <div class="sec-32__item__desc">Опубликовано в Tech Briefs в марте 2018 г</div>
                     </div>
-                    <div class="sec-15__content__item">
-                        <div class="sec-15__content__item__img" style="background-image: url(img/sec-15.png);"></div>
-                        <div class="sec-15__content__item__text">
-                            <div class="sec-15__content__item__title">Этап линейного сканирования</div>
-                        </div>
+                    <div class="sec-32__item">
+                        <div class="sec-32__item__img" style="background-image: url(img/sec-32-item-1.jpg);"></div>
+                        <div class="sec-32__item__title">Премия Ассоциации малого бизнеса Монтаны Экспортер года в области малого бизнеса</div>
+                        <div class="sec-32__item__desc">Resonon работает с ARCSTONE Mission для количественной оценки лунного отражения.</div>
+                    </div>
+                    <div class="sec-32__item">
+                        <div class="sec-32__item__img" style="background-image: url(img/sec-32-item-1.jpg);"></div>
+                        <div class="sec-32__item__title">Resonon проводит встречу с дистрибьюторами в Сан-Франциско</div>
+                        <div class="sec-32__item__desc">Resonon провел двухдневную встречу для наших международных дистрибьюторов в Сан-Франциско в феврале 2020 года. Это был большой успех!</div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- ============================END sec-15 ============================== -->
-    <!-- ============================ sec-5 ============================== -->
-    <section class="sec-5 sec">
-        <div class="container">
-            <div class="sec-5__content">
-                <h2 class="sec-title">Свяжитесь с нами</h2>
-                <div class="sec-5__desc">Щелкните ниже для получения дополнительной информации.</div>
-                <button class="btn">Свяжитесь с нами</button>
-            </div>
-            <div class="sec-5__alert">Системы высокоточной гиперспектральной съемки для исследовательских и промышленных приложений.</div>
-        </div>
-    </section>
-    <!-- ============================END sec-5 ============================== -->
+    <!-- ============================END sec-32 ============================== -->
     <!--========================== footer ==========================-->
     <section class="footer">
         <div class="footer__top">
