--- a/app/nunjucks/index.html
+++ b/app/nunjucks/index.html
@@ -23,8 +23,10 @@
         <div class="block-1">
             <div class="block-1__text">
                 <h2 class="sec-title">Системы гиперспектральной визуализации</h2>
-                <p>Комплексные системы для приложений дистанционного зондирования в лабораториях, на открытом воздухе и с воздуха, а также специальные решения для гиперспектрального машинного зрения.</p>
-                <p> Наши гиперспектральные камеры можно использовать в любой из систем гиперспектральной визуализации, которые мы предлагаем для лабораторных, наружных и дистанционных измерений. Их также можно использовать для машинного зрения и оптической сортировки .</p>
+                <div class="content-wp-editor">
+                    <p>Комплексные системы для приложений дистанционного зондирования в лабораториях, на открытом воздухе и с воздуха, а также специальные решения для гиперспектрального машинного зрения.</p>
+                    <p> Наши гиперспектральные камеры можно использовать в любой из систем гиперспектральной визуализации, которые мы предлагаем для лабораторных, наружных и дистанционных измерений. Их также можно использовать для машинного зрения и оптической сортировки .</p>
+                </div>
                 <div class="block-1__links">
                     <a href="" class="link">Посмотреть полные системы</a>
                     <a href="" class="link">Каталог продукции Resonon</a>
