--- a/app/nunjucks/Бортовая система дистанционного зондирования.html
+++ b/app/nunjucks/Бортовая система дистанционного зондирования.html
@@ -259,6 +259,35 @@
                     </li>
                 </ul>
             </div>
+            <div class="sec-13__docs__wrapper__col">
+                <div class="sec-13__desc">Обучающее видео</div>
+                <ul class="sec-13__docs">
+                    <li class="doc">
+                        <div class="doc__icon video"></div>
+                        <a href="" class="doc__title">Руководство по бортовой гиперспектральной системе [pdf]</a>
+                    </li>
+                    <li class="doc">
+                        <div class="doc__icon video"></div>
+                        <a href="" class="doc__title">Резюме бортовой постобработки [pdf] (рус. версия)</a>
+                    </li>
+                    <li class="doc">
+                        <div class="doc__icon video"></div>
+                        <a href="" class="doc__title">Бортовая радиометрия [pdf] (рус. версия)</a>
+                    </li>
+                    <li class="doc">
+                        <div class="doc__icon video"></div>
+                        <a href="" class="doc__title">Введение в обработку данных с помощью Spectronon [pdf]</a>
+                    </li>
+                    <li class="doc">
+                        <div class="doc__icon video"></div>
+                        <a href="" class="doc__title">Создание обучающих наборов и использование регрессионного анализа в Spectronon [pdf] (рус. версия)</a>
+                    </li>
+                    <li class="doc">
+                        <div class="doc__icon video"></div>
+                        <a href="" class="doc__title">Использование пакетного процессора [pdf] (рус. версия)</a>
+                    </li>
+                </ul>
+            </div>
         </div>
         <a href="" class="btn-link sec-13__btn-link">Просмотреть все статьи поддержки</a>
     </div>
