--- a/app/Бортовая система дистанционного зондирования.html
+++ b/app/Бортовая система дистанционного зондирования.html
@@ -22,9 +22,9 @@
                     <div class="header__logo__desc">Решения для гиперспектральной <br> визуализации</div>
                 </div>
                 <ul class="header__nav">
-                    <li class="has-children">
+                    <li class="menu-item-has-children">
                         <a href="/">База знаний</a>
-                        <ul class="submenu">
+                        <ul class="sub-menu">
                             <li><a href="">Pika L</a></li>
                             <li><a href="">Pika XC2</a></li>
                             <li><a href="">Pika NIR-320</a></li>
@@ -49,9 +49,9 @@
         <div class="header__bottom">
             <div class="container">
                 <ul class="header__nav">
-                    <li class="has-children">
+                    <li class="menu-item-has-children">
                         <a href="/">Гиперспектральные камеры</a>
-                        <ul class="submenu">
+                        <ul class="sub-menu">
                             <li><a href="">Pika L</a></li>
                             <li><a href="">Pika XC2</a></li>
                             <li><a href="">Pika NIR-320</a></li>
@@ -60,10 +60,10 @@
                             <li><a href="">Объективные линзы</a></li>
                         </ul>
                     </li>
-                    <li class="has-children"><a href="/">Системы</a></li>
+                    <li class="menu-item-has-children"><a href="/">Системы</a></li>
                     <li><a href="/">Машинное зрение</a></li>
                     <li><a href="/">Гиперспектральное программное обеспечение</a></li>
-                    <li class="has-children"><a href="/">Области применения</a></li>
+                    <li class="menu-item-has-children"><a href="/">Области применения</a></li>
                 </ul>
             </div>
         </div>
@@ -323,6 +323,35 @@
                         </li>
                     </ul>
                 </div>
+                <div class="sec-13__docs__wrapper__col">
+                    <div class="sec-13__desc">Обучающее видео</div>
+                    <ul class="sec-13__docs">
+                        <li class="doc">
+                            <div class="doc__icon video"></div>
+                            <a href="" class="doc__title">Руководство по бортовой гиперспектральной системе [pdf]</a>
+                        </li>
+                        <li class="doc">
+                            <div class="doc__icon video"></div>
+                            <a href="" class="doc__title">Резюме бортовой постобработки [pdf] (рус. версия)</a>
+                        </li>
+                        <li class="doc">
+                            <div class="doc__icon video"></div>
+                            <a href="" class="doc__title">Бортовая радиометрия [pdf] (рус. версия)</a>
+                        </li>
+                        <li class="doc">
+                            <div class="doc__icon video"></div>
+                            <a href="" class="doc__title">Введение в обработку данных с помощью Spectronon [pdf]</a>
+                        </li>
+                        <li class="doc">
+                            <div class="doc__icon video"></div>
+                            <a href="" class="doc__title">Создание обучающих наборов и использование регрессионного анализа в Spectronon [pdf] (рус. версия)</a>
+                        </li>
+                        <li class="doc">
+                            <div class="doc__icon video"></div>
+                            <a href="" class="doc__title">Использование пакетного процессора [pdf] (рус. версия)</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <a href="" class="btn-link sec-13__btn-link">Просмотреть все статьи поддержки</a>
         </div>
@@ -408,24 +437,38 @@
     </section>
     <!--==========================END footer ==========================-->
     <!--========================== mobile__nav ==========================-->
-    <section class="mobile__nav" data-mobile-nav>
+    <section class="mobile__nav" data-mobile-nav style="display: none;">
         <div class="mobile__nav__content">
-            <ul class="mobile__nav__links">
-                <li class="has-children"> Гиперспектральные камеры <ul class="mobile__nav__submenu">
-                        <li><a href="">Pika L</a></li>
-                        <li><a href="">Pika XC2</a></li>
-                        <li><a href="">Pika NIR-320</a></li>
-                        <li><a href="">PPika NIR-640</a></li>
-                        <li><a href="">Pika NUV</a></li>
+            <!-- <ul class="mobile__nav__links">
+				<li class="has-children">
+					Гиперспектральные камеры
+					<ul class="mobile__nav__submenu">
+						<li><a href="">Pika L</a></li>
+						<li><a href="">Pika XC2</a></li>
+						<li><a href="">Pika NIR-320</a></li>
+						<li><a href="">PPika NIR-640</a></li>
+						<li><a href="">Pika NUV</a></li>
+					</ul>
+				</li>
+				<li class="has-children"><a href="/">Системы</a></li>
+				<li><a href="/">Машинное зрение</a></li>
+				<li><a href="/">Гиперспектральное программное обеспечение</a></li>
+				<li class="has-children"><a href="/">Области применения</a></li>
+				<li class="has-children"><a href="/">База знаний</a></li>
+				<li><a href="/">О нас</a></li>
+				<li><a href="/">Связаться с нами</a></li>
+			</ul> -->
+            <ul id="menu-shapka-niz-1" class="menu mobile__nav__links">
+                <li class="menu-item menu-item-type-post_type_archive menu-item-object-cams current-menu-item menu-item-has-children menu-item-360"><a href="http://hasenorf.beget.tech/giperspektralnoe-mashinnoe-zrenie/" aria-current="page">Гиперспектральные камеры</a>
+                    <ul class="sub-menu">
+                        <li class="menu-item menu-item-type-post_type menu-item-object-cams menu-item-361"><a href="http://hasenorf.beget.tech/giperspektralnoe-mashinnoe-zrenie/">Pika L</a></li>
+                        <li class="menu-item menu-item-type-post_type menu-item-object-cams menu-item-361"><a href="http://hasenorf.beget.tech/giperspektralnoe-mashinnoe-zrenie/">Pika L</a></li>
+                        <li class="menu-item menu-item-type-post_type menu-item-object-cams menu-item-361"><a href="http://hasenorf.beget.tech/giperspektralnoe-mashinnoe-zrenie/">Pika L</a></li>
                     </ul>
                 </li>
-                <li class="has-children"><a href="/">Системы</a></li>
-                <li><a href="/">Машинное зрение</a></li>
-                <li><a href="/">Гиперспектральное программное обеспечение</a></li>
-                <li class="has-children"><a href="/">Области применения</a></li>
-                <li class="has-children"><a href="/">База знаний</a></li>
-                <li><a href="/">О нас</a></li>
-                <li><a href="/">Связаться с нами</a></li>
+                <li class="menu-item menu-item-type-post_type_archive menu-item-object-systems menu-item-362"><a href="http://hasenorf.beget.tech/systems/">Системы</a></li>
+                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-363"><a href="http://hasenorf.beget.tech/giperspektralnoe-mashinnoe-zrenie/">Машинное зрение</a></li>
+                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-364"><a href="http://hasenorf.beget.tech/giperspektralnoe-programmnoe-obespechenie/">Гиперспектральное программное обеспечение</a></li>
             </ul>
         </div>
     </section>
